--- a/kratos_omkar/package.xml
+++ b/kratos_omkar/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>kratos_omkar</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Custom package for KRATOS EC Inductions Week3</description>
   <maintainer email="ousvanjari@gmail.com">darkknighties</maintainer>
   <license>TODO: License declaration</license>
 
@@ -12,6 +12,7 @@
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
+  
 
   <build_depend>rosidl_default_generators</build_depend>
 
